[FIX]header z-index

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@ a {
   background-color: white;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
   border-bottom: 1px solid #e8e8e8;
 }
 
